# analysis_system

./: .env  .env_dev  .gitignore  README.md  docker-compose.yaml  pyproject.toml
compose/local/fastapi/: Dockerfile  start.sh
compose/local/fastapi/celery/beat/: start.sh
compose/local/fastapi/celery/flower/: start.sh
compose/local/fastapi/celery/worker/: start.sh
services/backend/: .flake8  Makefile  alembic.ini  pytest.ini
services/backend/migrations/: env.py
services/backend/migrations/versions/: 6be9edeec11b_init.py
services/backend/src/: config.py  main.py  routers.py  worker.py
services/backend/src/auth/: manager.py  routers.py  schemas.py
services/backend/src/data/: models.py  routers.py
services/backend/src/data/queries/: init_data.py  orm.py
services/backend/src/data/schemas/: request.py  response.py
services/backend/src/db/: base.py  session.py  types.py
services/backend/src/tasks/data/: tasks.py
services/backend/src/tasks/healthchecks/: tasks.py
services/backend/src/users/: models.py  routers.py
services/backend/templates/: realtime.html
services/backend/testing/: conftest.py
